--- a/README.org
+++ b/README.org
@@ -1,6 +1,9 @@
+
 * C4Beta
 - A C99 compiler with 32-bit BETA backend.
 -  
+** Scopes
+which constructs open new scopes? If blocks
 
 ** Register Allocation
 - pick a not t with fewer than k nbrs in RIG
